@@ -148,6 +148,7 @@
 			<version>${testcontainers.version}</version>
 			<scope>test</scope>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.testcontainers</groupId>
 			<artifactId>postgresql</artifactId>
@@ -157,6 +158,12 @@
 		<dependency>
 			<groupId>io.rest-assured</groupId>
 			<artifactId>rest-assured</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.github.dasniko</groupId>
+			<artifactId>testcontainers-keycloak</artifactId>
+			<version>1.3.1</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -330,10 +337,17 @@
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>3.0.0-M4</version>
 					<configuration>
+						<runOrder>alphabetical</runOrder>
+						<includes>
+							<include>TestAuthKeyCloak.java</include>
+							<include>TestNoAuth.java</include>
+ 							<include>TestBasicAuth.java</include>
+						</includes>
 						<forkedProcessExitTimeoutInSeconds>500</forkedProcessExitTimeoutInSeconds>
 						<forkCount>3</forkCount>
 						<reuseForks>true</reuseForks>
 						<argLine>-Xmx2048m -Xmx1G -XX:PermSize=1024m</argLine>
+						<argLine>--illegal-access=permit</argLine>
 					</configuration>
 				</plugin>
 			</plugins>
